--- a/islamai/backend/~/.islamai/config.json
+++ b/islamai/backend/~/.islamai/config.json
@@ -1,6 +1,6 @@
 {
   "api_keys": {
-    "gemini": "AIzaSyBz4AQv_k9sw9BdSGHHxEbn8ZvXjoJpMnE",
+    "gemini": "",
     "deepseek": ""
   },
   "active_model": "gemini-pro"
